# otcv8-dev

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
modules/client_entergame/: characterlist.lua  entergame.lua
modules/game_battle/: battle.lua
modules/game_features/: features.lua
modules/game_tooltip/: gen_assets.py  styles.otui  tooltip.lua  tooltip.otmod
modules/gamelib/: const.lua
src/client/: CMakeLists.txt  item.cpp  item.h  luafunctions_client.cpp  protocolgameparse.cpp  timerdebug.cpp  timerdebug.h  uiitem.cpp  uiitem.h
src/framework/: CMakeLists.txt
src/framework/http/: session.cpp  websocket.cpp
src/framework/net/: connection.cpp  protocol.cpp
src/framework/stdext/: compiler.h  net.cpp
